# preocr

./: .gitignore  .pre-commit-config.yaml  AGENTS.md  README.md  benchmark.py  benchmark_accuracy_output.txt  benchmark_report_screenshot.md  benchmark_result_latest.txt  pyproject.toml  test.ipynb
.github/: PYPI_TRUSTED_PUBLISHER_SETUP.md  SECURITY.md
.github/workflows/: ci-cd-release.yml  create-tag-on-version-bump.yml  release.yml  validate-release.yml
docs/: ACCURACY_ANALYSIS.md  CHANGELOG.md  CHANGELOG_GUIDELINES.md  DATA_SOURCE_FORMATS_TEST_RESULTS.md  DOCUMENT_AI_TRENDS_ASSESSMENT.md  FINAL_COMPETITIVE_ANALYSIS.md  IMPLEMENTATION_ASSESSMENT.md  IMPLEMENTATION_CONCERNS.md  INTEGRATION_PLAN.md  OCR_DECISION_MODEL.md  RELEASE.md  RELEASE_PROCESS.md  RELEASE_STEPS.md  RELEASE_WORKFLOW_EXPLAINED.md  SECTIONS_ENHANCEMENT_ANALYSIS.md  STRUCTURED_OUTPUT_COMPARISON.md
examples/: basic_usage.py  config_templates_example.py  layout_aware_usage.py  test_preprocess_flow.py
preocr/: __init__.py  cli.py  constants.py  version.py
preocr/analysis/: __init__.py  layout_analyzer.py  opencv_layout.py  page_detection.py
preocr/core/: __init__.py  decision.py  detector.py  extractor.py  signals.py
preocr/extraction/: __init__.py  base.py  confidence.py  formatters.py  office_extractor.py  pdf_extractor.py  schemas.py  text_extractor.py  validation.py
preocr/planner/: __init__.py  _extract.py  config.py  decision.py  intent.py  models.py  planner.py
preocr/preprocess/: __init__.py  pipeline.py  utils.py
preocr/preprocess/steps/: __init__.py  denoise.py  deskew.py  otsu.py  rescale.py
preocr/probes/: __init__.py  image_probe.py  pdf_probe.py  text_probe.py
preocr/reporting/: __init__.py  report_generator.py
preocr/utils/: __init__.py  batch.py  cache.py  filetype.py  logger.py  telemetry.py
releases/: README.md  v0.1.0.json  v0.1.0.md  v0.1.1.json  v0.1.1.md  v0.2.0.json  v0.2.0.md  v0.3.0.json  v0.3.0.md  v0.3.1.json  v0.3.1.md  v0.3.2.json  v0.3.2.md  v0.4.0.json  v0.4.0.md  v0.5.0.json  v0.5.0.md  v0.5.1.json  v0.5.1.md  v0.5.2.json  v0.5.2.md  v0.5.3.json  v0.5.3.md  v0.6.0.json  v0.6.0.md  v0.7.0.json  v0.7.0.md  v1.0.0.json  v1.0.0.md  v1.0.1.json  v1.0.1.md
scripts/: BENCHMARK_COMPARISON.md  README.md  auto_label_ground_truth.py  backfill_releases_from_tags.py  benchmark_accuracy.py  benchmark_batch.py  benchmark_batch_full.py  benchmark_data_source_formats.json  benchmark_planner.py  benchmark_planner_results.json  benchmark_preprocess_accuracy.py  evaluate_planner.py  generate_changelog_entries.py  generate_release.py  get_release_info.py  ground_truth_data_source_formats.json  planner_eval_downloads.json  planner_eval_results.json  sync_releases.py  validate_accuracy.py
tests/: test_batch.py  test_config_thresholds.py  test_decision.py  test_detector.py  test_hybrid_pipeline.py  test_layout_aware_needs_ocr.py  test_opencv_layout.py  test_pdf_probe.py  test_planner.py  test_preprocess.py  test_signals.py  test_skip_opencv_heuristics.py
tests/integration/: README.md
