[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "preocr"
dynamic = ["version"]
description = "A fast, CPU-only library that intelligently detects whether files need OCR processing before expensive OCR operations. Uses hybrid adaptive pipeline for 92-95% accuracy."
readme = "README.md"
requires-python = ">=3.9"
license = "Apache-2.0"
authors = [
    {name = "PreOCR Contributors"}
]
keywords = [
    "ocr",
    "document",
    "detection",
    "preprocessing",
    "file-analysis",
    "layout-analysis",
    "pdf-analysis",
    "text-extraction",
    "document-processing",
    "opencv",
    "computer-vision",
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",

    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",

    "Topic :: Software Development :: Libraries :: Python Modules",
    "Topic :: Text Processing",
    "Topic :: Multimedia :: Graphics",
    "Topic :: Scientific/Engineering :: Image Recognition",

    "Operating System :: OS Independent",
]


dependencies = [
    "python-magic>=0.4.27",
    "pdfplumber>=0.10.0",
    "python-docx>=1.1.0",
    "python-pptx>=0.6.23",
    "openpyxl>=3.1.0",
    "Pillow>=10.0.0",
    "beautifulsoup4>=4.12.0",
    "pydantic>=2.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4.0",
    "pytest-cov>=4.1.0",
    "black>=23.0.0",
    "ruff>=0.1.0",
    "mypy>=1.5.0",
    "pre-commit>=3.5.0",
]
layout-refinement = [
    "opencv-python-headless>=4.8.0",
    "numpy>=1.24.0",
]
batch = [
    "tqdm>=4.65.0",
]

[project.urls]
Homepage = "https://github.com/yuvaraj3855/preocr"
Documentation = "https://github.com/yuvaraj3855/preocr#readme"
Repository = "https://github.com/yuvaraj3855/preocr"
Issues = "https://github.com/yuvaraj3855/preocr/issues"

[tool.setuptools]
packages = {find = {exclude = ["examples*", "scripts*", "tests*", "venv*"]}}
include-package-data = true

[tool.setuptools.package-data]
preocr = ["py.typed"]

[tool.setuptools.dynamic]
version = {attr = "preocr.version.__version__"}

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = "-v --cov=preocr --cov-report=term-missing"

[tool.black]
line-length = 100
target-version = ["py39"]

[tool.ruff]
line-length = 100
target-version = "py39"

[tool.mypy]
python_version = "3.9"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = false
warn_unused_ignores = true
warn_redundant_casts = true
warn_unreachable = true
strict_optional = true
no_implicit_optional = true

