[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "preocr"
dynamic = ["version"]

description = "A fast, layout-aware OCR decision engine for document processing pipelines. Detects whether files truly require OCR before expensive processing, reducing unnecessary OCR calls while preserving extraction reliability."

readme = { file = "README.md", content-type = "text/markdown" }

requires-python = ">=3.9"
license = { text = "Apache-2.0" }

authors = [
    { name = "Yuvaraj Kannan" }
]

keywords = [
    "ocr",
    "ocr-decision",
    "pre-ocr",
    "document-processing",
    "pdf-analysis",
    "layout-analysis",
    "ocr-optimization",
    "ocr-routing",
    "pdf-processing",
    "computer-vision",
    "document-ai",
]

classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Intended Audience :: Developers",
    "Intended Audience :: Information Technology",

    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",

    "License :: OSI Approved :: Apache Software License",

    "Topic :: Software Development :: Libraries :: Python Modules",
    "Topic :: Text Processing",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Topic :: Scientific/Engineering :: Image Recognition",
    "Topic :: Multimedia :: Graphics :: Capture",
    "Topic :: Utilities",

    "Operating System :: OS Independent",
]

dependencies = [
    "python-magic>=0.4.27",
    "pdfplumber>=0.10.0",
    "python-docx>=1.1.0",
    "python-pptx>=0.6.23",
    "openpyxl>=3.1.0",
    "Pillow>=10.0.0",
    "beautifulsoup4>=4.12.0",
    "pydantic>=2.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4.0",
    "pytest-cov>=4.1.0",
    "black>=23.0.0",
    "ruff>=0.1.0",
    "mypy>=1.5.0",
    "pre-commit>=3.5.0",
]
layout-refinement = [
    "opencv-python-headless>=4.8.0",
    "numpy>=1.24.0",
    "pymupdf>=1.23.0",
]
batch = [
    "tqdm>=4.65.0",
]
benchmark = [
    "matplotlib>=3.7.0",
]

[project.urls]
Homepage = "https://github.com/yuvaraj3855/preocr"
Documentation = "https://github.com/yuvaraj3855/preocr#readme"
Repository = "https://github.com/yuvaraj3855/preocr"
Issues = "https://github.com/yuvaraj3855/preocr/issues"

[tool.setuptools]
packages = { find = { exclude = ["examples*", "scripts*", "tests*", "venv*"] } }
include-package-data = true

[tool.setuptools.package-data]
preocr = ["py.typed"]

[tool.setuptools.dynamic]
version = { attr = "preocr.version.__version__" }

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = "-v --cov=preocr --cov-report=term-missing"

[tool.black]
line-length = 100
target-version = ["py39"]

[tool.ruff]
line-length = 100
target-version = "py39"

[tool.mypy]
python_version = "3.9"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = false
warn_unused_ignores = true
warn_redundant_casts = true
warn_unreachable = true
strict_optional = true
no_implicit_optional = true
